k3sdeploys/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: domotica
spec:
  ports:
    - name: "http"
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app: home-assistant
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant-nodeport
  namespace: domotica
spec:
  type: NodePort
  ports:
    - port: 8123
      targetPort: 8123
      nodePort: 31000
      protocol: TCP
      name: http
  selector:
    app: home-assistant
